fix dark mode style

--- a/src/assets/style/base.styl
+++ b/src/assets/style/base.styl
@@ -189,6 +189,17 @@ html, body
   ::-webkit-scrollbar
     width: 0;
 
+html:has(.dark)
+  ::-webkit-scrollbar
+    width: 10px;
+    height: 5px;
+  ::-webkit-scrollbar-thumb
+    border-color: transparent
+  ::-webkit-scrollbar-track
+    background #16161a
+    border-color: transparent
+  ::-webkit-scrollbar-thumb:hover
+    background: #e6e6e6;
 
 .dark
   background #16161a
@@ -197,16 +208,11 @@ html, body
   .van-button
     background #333
     color #fff !important
-  ::-webkit-scrollbar
-    width: 10px;
-    height: 5px;
-  ::-webkit-scrollbar-thumb
-    border-color: transparent
-  ::-webkit-scrollbar-track
-    background transparent
-    border-color: transparent
-  ::-webkit-scrollbar-thumb:hover
-    background: #e6e6e6;
+  .van-dialog__message--has-title
+    color #fff
+  a
+   color #dba5ff
+
 .dark #app
   min-height 100vh
   &,
@@ -239,29 +245,46 @@ html, body
 
   .rank-card .spec_wp,
   .image-card
-    border 1px solid #aaa
+    // border 1px solid #aaa
+    border 0
     border-radius: 0.26667rem;
 
   .nav-container .nav-bar
-    box-shadow 0 0 0.26667rem #555
+    box-shadow 0 0 0.26667rem #222
     background rgba(0,0,0,0.8)
     li
       display flex
       justify-content center
       align-items center
+      flex-direction column
       color #fff
     .icon
       display none
+    .van-icon
+      margin-bottom 0.1rem
+      font-size 0.36rem
+      &.active,
+      &.active + span
+        color: #f2c358
     span
       display inline-block
 
   .com_sel_tab,
-  .rank .nav a
+  .rank .nav a,
+  .Following .van-tab:not(.van-tab--active) .van-tab__text
     background #777
     color #fff
     &.cur
       background: #f2c358;
       color #333
+
+  .van-cell::after,
+  .van-action-sheet__description::after
+    border-bottom: 1px solid #555;
+
+  .setting-page .api-chk .van-action-sheet__name,
+  .setting-page .img-chk .van-action-sheet__name
+    color #eee !important
 
   .van-button--plain
     background rgba(0,0,0,0)
@@ -270,26 +293,72 @@ html, body
 
   .van-share-sheet__cancel::before,
   .van-action-sheet__gap
-    background #aaa
+    background #555
     height 1px
+
   .van-share-sheet__title,
-  .van-share-sheet__name
+  .van-share-sheet__name,
+  .van-field__label
     color #fff
 
   .novel-card,
   .search .keyword
     background #333
 
+  .rank .top
+    background rgba(0,0,0,0.8)
+
   .search .search-bar-wrap .search-bar,
   .search .search-bar-wrap .van-search__content,
   .search .com_sel_tabs,
-  .rank .top
-    background rgba(0,0,0,0.8)
+  .Home .com_sel_tabs
+    background #16161a
+    backdrop-filter: none
+
+  .show_pop_icon,
+  .search_popular_icon
+    .icon
+      position relative
+      z-index 2
+    &::before
+      content ''
+      position absolute
+      z-index 1
+      top 50%
+      left 50%
+      transform translate(-50%, -50%)
+      width 1.25em
+      height 1.25em
+      border-radius 50%
+      background #ddd
+
+  .search_popular_icon
+    position relative
+    text-align center
+    display inline-block
+    margin-top 0.2rem
+    margin-right 0.2rem
+    .icon
+      margin-right 0
+      vertical-align: -0.25em;
+    &::before
+      width 2em
+      height 2em
+
   .search-dropdown
     background #16161a
+
+  .search_params
+    .van-dropdown-menu__bar
+      box-shadow none
+    .van-dropdown-menu__title
+      color #fff
+
+  .van-calendar__header
+    box-shadow none
+
   .van-search__content
     border 1px solid #aaa
-    margin-right 10px
     &,
     .van-cell
       background-color: transparent !important
@@ -321,9 +390,6 @@ html, body
   .van-field__control
       color #fff
 
-  a
-   color #dba5ff
-
   .ia-cont .ia-right .artwork-meta
     background none
   .artwork-meta .tag-list
@@ -338,11 +404,17 @@ html, body
   .image-view.shrink::after
     background: linear-gradient(to top, #16161a, rgba(0,0,0,0));
   .ia-right .shrink::after
-    background: linear-gradient(to top, #666, rgba(0,0,0,0));
-  .users .info-container .info .detail .content
-    color #ccc
-    &::after
-      background: linear-gradient(to top, #16161a, rgba(0,0,0,0));
-  .users .info-container .info .follow .num,
-  .users .info-container .info .friend .num
-    color #bbb
+    background: linear-gradient(to top, #16161a, rgba(0,0,0,0));
+  .users
+    .info-container .detail .content
+      color #ccc
+      & + .more
+        color #fff
+      &::after
+        background: linear-gradient(to top, #16161a, rgba(0,0,0,0));
+
+    .info-container .num
+      color #bbb
+
+  .image-slide
+      border 1px solid #16161a
